--- a/index.html
+++ b/index.html
@@ -1,522 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge"
+		/>
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+			content="width=device-width, initial-scale=1.0"
 		/>
-		<meta name="description" content="" />
-		<meta name="author" content="" />
-		<title>Resume - Tyler Davis</title>
-		<link
-			rel="icon"
-			type="image/x-icon"
-			href="assets/img/favicon.ico"
-		/>
-		<!-- Font Awesome icons (free version)-->
-		<script
-			src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
-			crossorigin="anonymous"
-		></script>
-		<!-- Google fonts-->
-		<link
-			href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
-			rel="stylesheet"
-			type="text/css"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i"
-			rel="stylesheet"
-			type="text/css"
-		/>
-		<!-- Core theme CSS (includes Bootstrap)-->
-		<link href="css/styles.css" rel="stylesheet" />
+		<!-- A Anchors -->
+		<title>Songs of Meaning</title>
+		<link rel="stylesheet" href="/Styles/css.css" />
+		<style>
+			h4 {
+				font-size: larger;
+			}
+			p {
+				font-weight: bolder;
+			}
+			h6 {
+				font-size: 15px;
+			}
+			li {
+				font-size: 20px;
+			}
+			a {
+				color: aliceblue;
+			}
+		</style>
 	</head>
-	<body id="page-top">
-		<!-- Navigation-->
-		<nav
-			class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top"
-			id="sideNav"
-		>
+	<body>
+		<div class="linkfont">
+			<a id="btt" href="html/home.html">Home</a> |
 			<a
-				class="navbar-brand js-scroll-trigger"
-				href="#page-top"
+				href="https://clutchklain.github.io/Classpractice/"
+				target="_blank"
+				>Resume</a
 			>
-				<span class="d-block d-lg-none"
-					>Tyler Davis</span
-				>
-				<span class="d-none d-lg-block"
-					><img
-						class="img-fluid img-profile rounded-circle mx-auto mb-2"
-						src="assets/img/profile.jpg"
-						alt="..."
-				/></span>
-			</a>
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-bs-toggle="collapse"
-				data-bs-target="#navbarResponsive"
-				aria-controls="navbarResponsive"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
+			|
+			<a href="html/tableau.html"
+				>Tableau Graph with Most Popular Songs</a
 			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div
-				class="collapse navbar-collapse"
-				id="navbarResponsive"
-			>
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a
-							class="nav-link js-scroll-trigger"
-							href="#about"
-							>About</a
-						>
-					</li>
-					<li class="nav-item">
-						<a
-							class="nav-link js-scroll-trigger"
-							href="#experience"
-							>Experience</a
-						>
-					</li>
-					<li class="nav-item">
-						<a
-							class="nav-link js-scroll-trigger"
-							href="#education"
-							>Education</a
-						>
-					</li>
-					<li class="nav-item">
-						<a
-							class="nav-link js-scroll-trigger"
-							href="#skills"
-							>Skills</a
-						>
-					</li>
-					<li class="nav-item">
-						<a
-							class="nav-link js-scroll-trigger"
-							href="#interests"
-							>Interests</a
-						>
-					</li>
-					<li class="nav-item">
-						<a
-							class="nav-link js-scroll-trigger"
-							href="#awards"
-							>Awards</a
-						>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		<!-- Page Content-->
-		<div class="container-fluid p-0">
-			<!-- About-->
-			<section class="resume-section" id="about">
-				<div class="resume-section-content">
-					<h1 class="mb-0">
-						Tyler
-						<span class="text-primary"
-							>Davis</span
-						>
-					</h1>
-					<div class="subheading mb-5">
-						400 N 100 E · Grand Junction, CO 84606 ·
-						(317) 585-8468 ·
-						<a href="mailto:name@email.com"
-							>yeah@email.com</a
-						>
-					</div>
-					<p class="lead mb-5"></p>
-					I am a determined team player who cares
-					about the physical and emotional
-					well-being of others. I work hard to
-					build relationships of trust and
-					dependability because I am motivated to
-					provide quality care for others.
-					<!-- <div class="social-icons">
-						<a class="social-icon" href="#!"
-							><i
-								class="fab fa-linkedin-in"
-							></i
-						></a>
-						<a class="social-icon" href="#!"
-							><i class="fab fa-github"></i
-						></a>
-						<a class="social-icon" href="#!"
-							><i class="fab fa-twitter"></i
-						></a>
-						<a class="social-icon" href="#!"
-							><i
-								class="fab fa-facebook-f"
-							></i
-						></a>
-					</div> -->
-				</div>
-			</section>
-			<hr class="m-0" />
-			<!-- Experience-->
-			<section class="resume-section" id="experience">
-				<div class="resume-section-content">
-					<h2 class="mb-5">Experience</h2>
-					<div
-						class="d-flex flex-column flex-md-row justify-content-between mb-5"
-					>
-						<div class="flex-grow-1">
-							<h3 class="mb-0">
-								Building Care Custodian
-							</h3>
-							<div class="subheading mb-3">
-								Brigham Young University
-							</div>
-							<p>
-								Ensure cleanliness for lab
-								staff on floor 3 of Life
-								Science Building. Receive
-								and execute tasks from
-								manager.
-							</p>
-						</div>
-						<div class="flex-shrink-0">
-							<span class="text-primary"
-								>Feburary 2023 -
-								Present</span
-							>
-						</div>
-					</div>
-					<div
-						class="d-flex flex-column flex-md-row justify-content-between mb-5"
-					>
-						<div class="flex-grow-1">
-							<h3 class="mb-0">
-								Personal Service
-								Representative
-							</h3>
-							<div class="subheading mb-3">
-								Intermountain Healthcare
-							</div>
-							<p>
-								Working in family practice
-								and instacare clinics
-								focusing on communicating
-								clearly with patients,
-								medical assistants,
-								pharmacies, and other
-								medical staff. Promptly
-								follow through on requests
-								from both patients and
-								medical staff, resulting in
-								more effective
-								administrative and clinical
-								processes. Handle patients'
-								frustrations in a caring and
-								effective manner.
-							</p>
-						</div>
-						<div class="flex-shrink-0">
-							<span class="text-primary"
-								>February 2022 - February
-								2023</span
-							>
-						</div>
-					</div>
-					<div
-						class="d-flex flex-column flex-md-row justify-content-between mb-5"
-					>
-						<div class="flex-grow-1">
-							<h3 class="mb-0">Counselor</h3>
-							<div class="subheading mb-3">
-								For the Strength of Youth
-								Conferences
-							</div>
-							<p>
-								Led 5 groups of 10+
-								teenagers in Provo, Utah;
-								Salt Lake City, Utah; Grand
-								Junction, Colorado; and
-								Canada. Formed close
-								connections with youth by
-								listening and providing
-								counsel. Actively sought
-								feedback from my leaders
-								regarding my work with
-								youth, then implemented that
-								feedback.
-							</p>
-						</div>
-						<div class="flex-shrink-0">
-							<span class="text-primary"
-								>July 2010 - December
-								2011</span
-							>
-						</div>
-					</div>
-					<div
-						class="d-flex flex-column flex-md-row justify-content-between"
-					>
-						<div class="flex-grow-1">
-							<h3 class="mb-0">Foreman</h3>
-							<div class="subheading mb-3">
-								Best Care Landscaping
-							</div>
-							<p>
-								Worked with high-end
-								clientele to complete
-								lanscaping projects in a
-								timely and effective manner.
-								Took direction from the
-								company owner to help manage
-								and train other employees.
-								Worked with sod, sprinklers,
-								block walls, plants, bobcat
-								machine, etc.
-							</p>
-						</div>
-						<div class="flex-shrink-0">
-							<span class="text-primary"
-								>June 2018 - August
-								2019</span
-							>
-						</div>
-					</div>
-				</div>
-			</section>
-			<hr class="m-0" />
-			<!-- Education-->
-			<section class="resume-section" id="education">
-				<div class="resume-section-content">
-					<h2 class="mb-5">Education</h2>
-					<div
-						class="d-flex flex-column flex-md-row justify-content-between mb-5"
-					>
-						<div class="flex-grow-1">
-							<h3 class="mb-0">
-								Brigham Young University
-							</h3>
-							<div class="subheading mb-3">
-								Pre-Med Student
-							</div>
-							<div>
-								Experience Design and
-								Management Applicant
-							</div>
-							<p>GPA: 3.75</p>
-						</div>
-						<div class="flex-shrink-0">
-							<span class="text-primary"
-								>August 2019-Present</span
-							>
-						</div>
-					</div>
-					<div
-						class="d-flex flex-column flex-md-row justify-content-between"
-					>
-						<div class="flex-grow-1">
-							<h3 class="mb-0">
-								Pleasant Grove High School
-							</h3>
-							<div class="subheading mb-3">
-								High School Graduate
-							</div>
-							<p>GPA: 3.94</p>
-						</div>
-						<div class="flex-shrink-0">
-							<span class="text-primary"
-								>August 2002 - May
-								2006</span
-							>
-						</div>
-					</div>
-				</div>
-			</section>
-			<hr class="m-0" />
-			<!-- Skills-->
-			<section class="resume-section" id="skills">
-				<div class="resume-section-content">
-					<h2 class="mb-5">Skills</h2>
-					<div class="subheading mb-3">
-						<li>
-                            <ul>
-                                <li>Database Design Development</li>
-                                <li>Entity-Relationship Diagramming</li>
-                                <li>Structured Query Language</li>
-                                <li>Tableau</li>
-                                <li>Excel Solver, Pivot Tables, and Charts</li>
-                                <li>HTML, CSS, Bootstrap</li>
-                                <li>Flow Chart Diagramming</li>
-                                <li>Visual Basic for Applications (VBA) Programming in Excel</li>
-                            </ul>
-                        </li>
-                        <div>
-					<!-- </div>
-					<ul class="list-inline dev-icons">
-						<li class="list-inline-item">
-							<i class="fab fa-html5"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-css3-alt"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-js-square"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-angular"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-react"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-node-js"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-sass"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-less"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-wordpress"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-gulp"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-grunt"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="fab fa-npm"></i>
-						</li>
-					</ul> -->
-					<div class="subheading mb-3">
-						Workflow
-					</div>
-					<ul class="fa-ul mb-0">
-						<li>
-							<span class="fa-li"
-								><i class="fas fa-check"></i
-							></span>
-							Accountable to leadership
-						<li>
-							<span class="fa-li"
-								><i class="fas fa-check"></i
-							></span>
-							Cross Functional Teams
-						</li>
-						<li>
-							<span class="fa-li"
-								><i class="fas fa-check"></i
-							></span>
-							Proficient in Spanish
-						</li>
-						</li>
-						<!-- <li>
-							<span class="fa-li"
-								><i class="fas fa-check"></i
-							></span>
-							Agile Development & Scrum
-						</li> -->
-					</ul>
-				</div>
-			</section>
-			<hr class="m-0" />
-			<!-- Interests-->
-			<section class="resume-section" id="interests">
-				<div class="resume-section-content">
-					<h2 class="mb-5">Interests</h2>
-					<p>
-						During the warmer months you can find me doing some type of activity in the sun. My recent adventures have included paddle boarding and it is my goal to take my inflatable paddle board on a little backpacking trip. When it turns cold I enjoy snowshoeing and snowmobiling. 
-					</p>
-					<p class="mb-0">
-						A native of Utah I have a lot of my family close by and enjoy times with them on the times I have off from school or work. When I find myslef in solitude, you can find me enjoying a good book or cooking something new.
-					</p>
-				</div>
-			</section>
-			<hr class="m-0" />
-			<!-- Awards-->
-			<section class="resume-section" id="awards">
-				<div class="resume-section-content">
-					<h2 class="mb-5">
-						Awards & Certifications
-					</h2>
-					<ul class="fa-ul mb-0">
-						<li>
-							<span class="fa-li"
-								><i
-									class="fas fa-trophy text-warning"
-								></i
-							></span>
-							BLS Certified
-						</li>
-						<li>
-							<span class="fa-li"
-								><i
-									class="fas fa-trophy text-warning"
-								></i
-							></span>
-							Eagle Scout
-						</li>
-						<li>
-							<span class="fa-li"
-								><i
-									class="fas fa-trophy text-warning"
-								></i
-							></span>
-							Cruz Azul Soccer Team Assistant Coach
-						</li>
-						<li>
-							<span class="fa-li"
-								><i
-									class="fas fa-trophy text-warning"
-								></i
-							></span>
-							Voces Latino Outreach Agency
-						</li>
-						<!-- <li> -->
-							<!-- <span class="fa-li"
-								><i
-									class="fas fa-trophy text-warning"
-								></i
-							></span>
-							2
-							<sup>nd</sup>
-							Place - University of Colorado
-							Boulder - Emerging Tech
-							Competition 2008
-						</li>
-						<li>
-							<span class="fa-li"
-								><i
-									class="fas fa-trophy text-warning"
-								></i
-							></span>
-							1
-							<sup>st</sup>
-							Place - James Buchanan High
-							School - Hackathon 2006
-						</li>
-						<li>
-							<span class="fa-li"
-								><i
-									class="fas fa-trophy text-warning"
-								></i
-							></span>
-							3
-							<sup>rd</sup>
-							Place - James Buchanan High
-							School - Hackathon 2005
-						</li> -->
-					</ul>
-				</div>
-			</section>
 		</div>
-		<!-- Bootstrap core JS-->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-		<!-- Core theme JS-->
-		<script src="js/scripts.js"></script>
+		<!-- BEGINNING -->
+
+		<div class="fontfortitle">
+			<h1>Songs of Meaning</h1>
+		</div>
+
+		<p></p>
+		<h6>
+			The power of music is in the connection that we
+			find with the words and sounds. Many songs have
+			had unique meaning to me over-time, but three
+			songs stand out among others.
+
+			<!-- List of Songs -->
+			<ol>
+				<li>
+					<a href="#tid">The Impossible Dream</a>
+				</li>
+				<ul>
+					Written in 1965 by Joe Darion and Mitch
+					Leigh.
+				</ul>
+				<li><a href="#shen">Shenandoa</a><br /></li>
+				<ul>
+					Like many folk songs, the author is
+					unknkown. It most likely originated
+					around 16th century.
+				</ul>
+				<li>
+					<a href="#waw">What a Wonder</a><br />
+				</li>
+				<ul>
+					Written by Marcia Davis a few years ago.
+				</ul>
+			</ol>
+		</h6>
+		<p></p>
+
+		<!-- Songs and Stories -->
+		<div class="titletextfont">
+			<h4 id="tid">The Impossible Dream</h4>
+		</div>
+
+		<div
+			class="pbs-viral-player-wrapper"
+			style="
+				position: relative;
+				padding-top: calc(56.25% + 43px);
+			"
+		>
+			<iframe
+				src="https://player.pbs.org/viralplayer/3044533989/"
+				allowfullscreen
+				allow="encrypted-media"
+				style="
+					position: absolute;
+					top: 0;
+					width: 100%;
+					height: 100%;
+					border: 0;
+				"
+			></iframe>
+		</div>
+
+		<div class="normaltextfont">
+			<h6>
+				This was a family favorite to sing while
+				growing up. I remember learning the words
+				and singing to my brother playing it on the
+				piano. I still hum it every once in awhile.
+			</h6>
+		</div>
+		<br />
+		<br />
+		<div class="titletextfont">
+			<h4 id="shen">Shenandoa</h4>
+		</div>
+
+		<iframe
+			width="560"
+			height="315"
+			src="https://www.youtube.com/embed/0NmKp5A8i3M"
+			title="YouTube video player"
+			frameborder="0"
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+			allowfullscreen
+		></iframe>
+
+		<div class="normaltextfont">
+			<h6>
+				When I began to take voice lessons a little
+				more seriously this was one of the first
+				songs that I sung. It gave me an
+				appreciations for songs sung in the past
+				that I could still enjoy. I performed the
+				piece in a competition and did pretty well.
+			</h6>
+		</div>
+		<br />
+		<br />
+		<div class="titletextfont">
+			<h4 id="waw">What a Wonder</h4>
+		</div>
+		<img
+			src="/images/nauvoo-temple-prophets-last-ride.jpeg"
+		/>
+
+		<div class="normaltextfont">
+			<h6>
+				My mom wrote "What a Wonder", and sadly, I
+				don't have a video of it. She remembers
+				coming out of the Nauvoo temple and seeing
+				the statue of Joseph Smith and Hyrum Smith
+				and the words just came to her. This has
+				helped me build my own testimony of the
+				restoration of the Church of Jesus Christ.
+			</h6>
+		</div>
+		<br />
+		<br />
+
+		<!-- BACK TO TOP -->
+		<a href="#btt">Back to Top</a>
 	</body>
 </html>
