--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		/>
 		<!-- A Anchors -->
 		<title>Songs of Meaning</title>
-		<link rel="stylesheet" href="/Styles/css.css" />
+		<link rel="stylesheet" href="./Styles/css.css" />
 		<style>
 			h4 {
 				font-size: larger;
