--- a/html/tableau.html
+++ b/html/tableau.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="../Styles/css.css" />
 	</head>
 	<body>
-		<a href="/index.html">Songs of Meaning</a>
+		<a href="../index.html">Songs of Meaning</a>
 		<div
 			class="tableauPlaceholder"
 			id="viz1681864129280"
