--- a/html/home.html
+++ b/html/home.html
@@ -33,7 +33,7 @@
 		</h4>
 		<div class="floatRight">
 			<img
-				src="/images/Tyler_In_Snow.JPG"
+				src="../images/Tyler_In_Snow.JPG"
 				title="Out"
 				width="500"
 				alt="Out in the snow"
