--- a/html/home.html
+++ b/html/home.html
@@ -26,7 +26,7 @@
 	</head>
 	<body>
 		<a href="home.html">Home</a> |
-		<a href="../index.html">Songs of Meaning</a>
+		<a href="/index.html">Songs of Meaning</a>
 		<h4>
 			Click on Songs of Meaning to see the rest of the
 			website!
